fixed alignment of the home page

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -56,6 +56,8 @@ header nav a {              /*It is required to type "a" too*/
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
+    align-items: center;
+    justify-content: center;
 }
 /*Title "History"*/
 .history h2{
